--- a/Linkette Name and Pronoun Change Test/EventFlowMsg/Hateno_TellMeTeacher01.yml
+++ b/Linkette Name and Pronoun Change Test/EventFlowMsg/Hateno_TellMeTeacher01.yml
@@ -1,5 +1,5 @@
 Talk_4000: |
-  <3 Type='0' Data='0701'/><4 Type='0' Data='16004700720065006500740069006e0067005f0030003000'/>Yes, yes, what is it?<0 Type='4'/>Oh, it's you, Linkette. Haven't seen you in—<5 Type='1'/><0 Type='4'/><FontSize Value='125'/><3 Type='0' Data='0b01'/><4 Type='0' Data='1800530075007200700072006900730065004c005f0030003100'/>LINK! YOU'RE BACK?!<5 Type='1'/><0 Type='4'/><3 Type='0' Data='0a01'/><FontSize Value='100'/>Ah— <5 Type='1'/>My apologies for the outburst.
+  <3 Type='0' Data='0701'/><4 Type='0' Data='16004700720065006500740069006e0067005f0030003000'/>Yes, yes, what is it?<0 Type='4'/>Oh, it's you, Linkette. Haven't seen you in—<5 Type='1'/><0 Type='4'/><FontSize Value='125'/><3 Type='0' Data='0b01'/><4 Type='0' Data='1800530075007200700072006900730065004c005f0030003100'/>LINKETTE! YOU'RE BACK?!<5 Type='1'/><0 Type='4'/><3 Type='0' Data='0a01'/><FontSize Value='100'/>Ah— <5 Type='1'/>My apologies for the outburst.
   C-clearly, you're back in town, then.<0 Type='4'/><3 Type='0' Data='0101'/>But what of Princess Zelda?
 Talk_1009: |
   <3 Type='0' Data='0c01'/><4 Type='0' Data='10005400680069006e006b005f0030003100'/>Speaking of <0 Type='3' Data='0000'/>detailed images<0 Type='3' Data='ffff'/>...<0 Type='4'/><0 Type='3' Data='0000'/>Robbie<0 Type='3' Data='ffff'/> mentioned he was making a tool
