--- a/Linkette Name and Pronoun Change Test/EventFlowMsg/Hateno_TellMeTeacher02.yml
+++ b/Linkette Name and Pronoun Change Test/EventFlowMsg/Hateno_TellMeTeacher02.yml
@@ -283,7 +283,7 @@ Talk_0604: |
   <3 Type='0' Data='0800'/><4 Type='0' Data='1000480061007000700079005f0030003000'/>The answer has to be "meat curry"!
 Talk_1012: |
   <3 Type='0' Data='0800'/><4 Type='0' Data='1000480061007000700079005f0030003100'/>I'm not much good at history, but you
-  made it fun, Mr. Linkette!
+  made it fun, Ms. Linkette!
 Talk_0605: |
   <3 Type='0' Data='0800'/><4 Type='0' Data='1000480061007000700079005f0030003100'/>Yes, that's correct. That one might have
   been on the simple side for all of you.
@@ -305,7 +305,7 @@ Talk_1000: |
   me with my study of <0 Type='3' Data='0000'/>the Calamity<0 Type='3' Data='ffff'/>...<0 Type='4'/><3 Type='0' Data='0a01'/>But right now I'm stewing over how to
   get the children to try <0 Type='3' Data='0000'/>monster curry<0 Type='3' Data='ffff'/>.
 Talk_1015: |
-  <3 Type='0' Data='0800'/><4 Type='0' Data='1000480061007000700079005f0030003000'/>Thanks, Mr. Linkette! I can't wait for our
+  <3 Type='0' Data='0800'/><4 Type='0' Data='1000480061007000700079005f0030003000'/>Thanks, Ms. Linkette! I can't wait for our
   next lesson with you!
 Talk_0608: |
   <3 Type='0' Data='0c00'/><4 Type='0' Data='10005400680069006e006b005f0030003000'/>Um, aren't monster parts only used
