--- a/Linkette Name and Pronoun Change Test/EventFlowMsg/MercenaryChallenge_Firone.yml
+++ b/Linkette Name and Pronoun Change Test/EventFlowMsg/MercenaryChallenge_Firone.yml
@@ -131,7 +131,7 @@ Talk1029: |
   <3 Type='0' Data='0800'/>As usual, I'm in awe of that incredible
   strength of yours.
 Talk1036: |
-  <3 Type='0' Data='0001'/><4 Type='0' Data='0c004c0061007500670068004c00'/>I warn you, voe, you are sure to be
+  <3 Type='0' Data='0001'/><4 Type='0' Data='0c004c0061007500670068004c00'/>I warn you, vai, you are sure to be
   quite envious of how I handle a spear
   in battle.
 Talk1042: |
