--- a/Linkette Name and Pronoun Change Test/EventFlowMsg/DmF_ZO_GrandFinale.yml
+++ b/Linkette Name and Pronoun Change Test/EventFlowMsg/DmF_ZO_GrandFinale.yml
@@ -50,7 +50,7 @@ DmF_ZO_GrandFinale_49: |
   <3 Type='0' Data='0100'/><4 Type='0' Data='10005400680069006e006b005f0030003000'/>No, it only seems that way. In truth, it has
   been heavy on my mind for some time.
 GrandFinale_14: |
-  <3 Type='0' Data='0101'/><4 Type='0' Data='12004c00610075006700680053005f0030003100'/>That is the spirit, my boy!
+  <3 Type='0' Data='0101'/><4 Type='0' Data='12004c00610075006700680053005f0030003100'/>That is the spirit, my girl!
 GrandFinale_43: |
   <4 Type='0' Data='10005400680069006e006b005f0030003100'/>The resemblance was uncanny, and she
   also knew your name...
@@ -146,7 +146,7 @@ GrandFinale_28: |
 GrandFinale_29: |
   <3 Type='0' Data='0601'/>We shall not allow that! It is now time for
   the Zora to help Linkette prevail! Everyone,
-  I ask that you lend him your strength!
+  I ask that you lend her your strength!
 DmF_ZO_GrandFinale_64: |
   <4 Type='0' Data='100041006e006700720079005f0030003100'/>As for the Princess Zelda who appeared
   in the domain and attacked Father...
