--- a/Linkette Name and Pronoun Change Test/EventFlowMsg/DmF_ZO_MiddleBossOut.yml
+++ b/Linkette Name and Pronoun Change Test/EventFlowMsg/DmF_ZO_MiddleBossOut.yml
@@ -69,7 +69,7 @@ Dm_ZO_0010_39: |
 Dm_ZO_0010_01: |
   <3 Type='0' Data='0c00'/><4 Type='0' Data='10005400680069006e006b005f0030003000'/>Thank you for the sentiment, Sidon.
   However, more importantly, we must
-  consider what Sir Linkette spoke of earlier.
+  consider what Madam Linkette spoke of earlier.
   The pillar of light that he said appeared
   at the reservoir begs to be investigated.
   
