--- a/Linkette Name and Pronoun Change Test/EventFlowMsg/Npc_Kakariko005.yml
+++ b/Linkette Name and Pronoun Change Test/EventFlowMsg/Npc_Kakariko005.yml
@@ -60,7 +60,7 @@ Talk_15: |
   this, I'm thrilled! I welcome the change!
   I, Cado, am happy to donate my house!
 Talk_25: |
-  <3 Type='0' Data='0b00'/>Ah, if it isn't Sir Linkette! What's on
+  <3 Type='0' Data='0b00'/>Ah, if it isn't Madam Linkette! What's on
   your mind?
   
   As for me, I just came by to check on my
@@ -84,7 +84,7 @@ Talk_26: |
 TerrorFire_02: |
   Please be careful!
 Talk_19: |
-  <3 Type='0' Data='0b00'/>If it isn't Sir Linkette! Out for a stroll, are we?
+  <3 Type='0' Data='0b00'/>If it isn't Madam Linkette! Out for a stroll, are we?
   
   
   Who, me? I'm...um...well... Ah, yes!
