--- a/Linkette Name and Pronoun Change Test/EventFlowMsg/Npc_Wanderer_Dungeon046.yml
+++ b/Linkette Name and Pronoun Change Test/EventFlowMsg/Npc_Wanderer_Dungeon046.yml
@@ -20,7 +20,7 @@ Talk_0001: |
 Talk_0008: |
   <3 Type='0' Data='0700'/>Thank you.
 Talk_0010: |
-  And, Sir Linkette, we could use your help
+  And, Madam Linkette, we could use your help
   as well. Please continue to search
   for geoglyphs.
   Or you could go to that <0 Type='3' Data='0000'/>Forgotten Temple<0 Type='3' Data='ffff'/>
