--- a/Linkette Name and Pronoun Change Test/EventFlowMsg/Npc_ZoraFencer.yml
+++ b/Linkette Name and Pronoun Change Test/EventFlowMsg/Npc_ZoraFencer.yml
@@ -68,7 +68,7 @@ Comment_16: |
   We have not seen <0 Type='3' Data='0000'/>ancient arowanas<0 Type='3' Data='ffff'/>
   around lately, <5 Type='0'/>and I have no idea where
   they can be found.
-  <3 Type='0' Data='0001'/>If you locate one, Sir Linkette, please bring it
+  <3 Type='0' Data='0001'/>If you locate one, Madam Linkette, please bring it
   to me.
   
   Do so, and I shall fix your precious item
@@ -88,7 +88,7 @@ Comment_17: |
   We have not seen them here recently, and
   I have no idea where they can be found.
   
-  <3 Type='0' Data='0701'/>If you locate one, Sir Linkette, could you
+  <3 Type='0' Data='0701'/>If you locate one, Madam Linkette, could you
   please bring it to me?
   
   <3 Type='0' Data='0801'/><4 Type='0' Data='0c004c0061007500670068005300'/>Do so, and I shall fix your precious item
@@ -104,7 +104,7 @@ Comment_17: |
 Comment_23: |
   <3 Type='0' Data='0801'/><4 Type='0' Data='0c004c0061007500670068005300'/>Here you are!
 Comment_18: |
-  <3 Type='0' Data='0101'/><4 Type='0' Data='1000480061007000700079005f0030003000'/>Sir Linkette! <5 Type='0'/>Thank you ever so much for
+  <3 Type='0' Data='0101'/><4 Type='0' Data='1000480061007000700079005f0030003000'/>Madam Linkette! <5 Type='0'/>Thank you ever so much for
   saving the domain. You are everything
   that Sidon claimed you to be.
   Though this is hardly sufficient remittance
@@ -114,7 +114,7 @@ Comment_18: |
   even a Hylian like you to <0 Type='3' Data='0000'/>climb waterfalls<0 Type='3' Data='ffff'/>
   with ease.
   I am certain that such a skill will prove
-  useful to you, Sir Linkette.
+  useful to you, Madam Linkette.
   
   <3 Type='0' Data='0c01'/><4 Type='0' Data='10005400680069006e006b005f0030003000'/>The only trouble is that I cannot find an
   <0 Type='3' Data='0000'/>ancient arowana<0 Type='3' Data='ffff'/>, the last thing I need to
