--- a/Linkette Name and Pronoun Change Test/StaticMsg/Reference.yml
+++ b/Linkette Name and Pronoun Change Test/StaticMsg/Reference.yml
@@ -97,7 +97,7 @@ Spike: |
 ShopGeneral: |
   General Store
 HorseInn_PlayerName2: |
-  Master Linkette
+  Lady Linkette
 FashionNpcNakedTalk_F_001: |
   <3 Type='0' Data='0b00'/>Oh, please! <5 Type='1'/>Don't waste your time talking
   to me looking like that.<0 Type='4'/>Listen, your fashion sense—or lack of
