--- a/Linkette Name and Pronoun Change Test/EventFlowMsg/WashedAwayBusinessTools.yml
+++ b/Linkette Name and Pronoun Change Test/EventFlowMsg/WashedAwayBusinessTools.yml
@@ -1,5 +1,5 @@
 Talk0017: |
-  <3 Type='0' Data='0a00'/><4 Type='0' Data='08004500610073006500'/>Ah, Mr. Hero...
+  <3 Type='0' Data='0a00'/><4 Type='0' Data='08004500610073006500'/>Ah, Ms. Hero...
 Talk0023: |
   <3 Type='0' Data='0b00'/><4 Type='0' Data='18005300750072007000720069007300650053005f0030003100'/>Aaah! <5 Type='0'/>Is that...a boat?!
 Talk0001: |
