--- a/Linkette Name and Pronoun Change Test/EventFlowMsg/Npc_NewsPaper001.yml
+++ b/Linkette Name and Pronoun Change Test/EventFlowMsg/Npc_NewsPaper001.yml
@@ -709,7 +709,7 @@ Talk3035: |
   
   "The pirates who had attacked Lurelin
   Village have been driven off! Reports
-  mention a golden-haired young man..."
+  mention a golden-haired young woman..."
   <3 Type='0' Data='0800'/>Haha! Take that, pirates! Now I could visit
   the resort without having to worry about
   pirate attacks.
@@ -728,12 +728,12 @@ Talk3036: |
   Ready for YOU.
   
   "Lurelin Village has returned to its former
-  beauty, with locals crediting one man as
+  beauty, with locals crediting one woman as
   the savior behind its comeback story."
   <3 Type='0' Data='0b00'/>Wait, weren't the pirates defeated just a
   little while ago? How could it be fully
   restored so quickly?
-  Did this same young man really defeat
+  Did this same young woman really defeat
   the pirates and rebuild the resort?
   That's amazing...
   <3 Type='0' Data='0100'/>Lurelin Village is a bit remote—way down
