--- a/Linkette Name and Pronoun Change Test/EventFlowMsg/Tribune02.yml
+++ b/Linkette Name and Pronoun Change Test/EventFlowMsg/Tribune02.yml
@@ -103,7 +103,7 @@ Talk_Search_1004: |
   see much at night...
 Talk_2012: |
   <3 Type='0' Data='0200'/><4 Type='0' Data='12004200650077006100720065005f0030003400'/>All right, everybody. This is definitely the
-  golden-haired golden boy. Get him!
+  golden-haired golden girl. Get her!
 Talk_Ready_1010: |
   <3 Type='0' Data='0700'/><4 Type='0' Data='08004500610073006500'/>Oh! Phew, it's just you, partner. I should
   have known you'd use the setting sun as
