--- a/Linkette Name and Pronoun Change Test/EventFlowMsg/Tribune07.yml
+++ b/Linkette Name and Pronoun Change Test/EventFlowMsg/Tribune07.yml
@@ -32,12 +32,12 @@ near0006: |
   Someone...
 Talk1026: |
   <3 Type='0' Data='0a00'/><4 Type='0' Data='0c005300610064005f0030003100'/>She told me that, so long as the one who
-  came to her aid was <0 Type='3' Data='0000'/>a man with blond
+  came to her aid was <0 Type='3' Data='0000'/>a woman with blond
   hair<0 Type='3' Data='ffff'/>, she was sure to be OK.
   Oh no... I worry that time is short for
   my <0 Type='3' Data='0000'/>friend<0 Type='3' Data='ffff'/>...
 Talk1027: |
-  <3 Type='0' Data='0700'/>Oh, it is the blond-haired man! I knew
+  <3 Type='0' Data='0700'/>Oh, it is the blond-haired woman! I knew
   that you would return to help...
   
   <3 Type='0' Data='0300'/>But we cannot remain here! My poor,
